# bankpulse-ai

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: dev.yaml
infra/: main.bicep
src/bankpulse/: config.py  models.py
src/bankpulse/generators/: __init__.py  customers.py  fraud_patterns.py  merchants.py  transactions.py
src/bankpulse/ingestion/: __init__.py  adls.py
src/bankpulse/utils/: logging.py
