[project]
name = "bankpulse"
version = "0.1.0"
description = "End-to-end banking + fraud analytics platform with an AI analyst layer."
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Sharath Chavali" }]

dependencies = [
    # Data modelling + validation
    "pydantic>=2.6",
    "pydantic-settings>=2.2",

    # Synthetic data
    "faker>=24.0",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15.0",

    # Async + HTTP (used in later phases for news/enrichment APIs)
    "httpx>=0.27",
    "anyio>=4.3",
    "tenacity>=8.2",

    # Azure SDKs
    "azure-identity>=1.16",
    "azure-keyvault-secrets>=4.8",
    "azure-storage-file-datalake>=12.14",

    # Config + logging
    "pyyaml>=6.0",
    "structlog>=24.1",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bankpulse"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]